2006-08-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactFolders.[hm]: new class module
	serving as the root of the contact folders available to the
	current user. Correctly lists the contact sources in webdav.

2006-08-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailAccountsView.m ([UIxMailAccountsView
	-composeAction]): new action method that permits external object
	to write a message from the default (primary) account.

	* UI/Contacts/UIxContactEditorBase.m ([UIxContactEditorBase
	-initSnapshot]): new method with code taken from "defaultAction"
	but needed for others.
	([UIxContactEditorBase -writeAction]): new action designed to
	compose the correct URL needed to obtain the MailerUI's email
	editor with the correct "mailto" parameter.

	* UI/Common/UIxSortableTableHeader.m: moved from MailerUI to
	Common so that other modules can use it.

	* UI/Contacts/UIxContactsListViewContainer.m: container to make it
	easier to manage both ajax and non-ajax requests.

	* UI/Contacts/UIxContactsFilterPanel.m: clone of
	UIxMailFilterPanel, but applicable to contact lists.

	* SoObjects/Contacts/NSDictionary+Contact.m ([NSDictionary
	-vcardContentFromSOGoContactRecord]): use the new standard methods
	created for each type of entry. If a line is determined to not
	contain information, it will be skipped.

	* SoObjects/SOGo/AgenorUserManager.m ([AgenorUserManager
	+initialize]): init defaultMailDomain with the user default
	"SOGoDefaultMailDomain".

2006-08-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactEditorBase.m ([UIxContactEditorBase
	-saveAction]): reorganized methods to only have ONE return point.
	Invoke saveRecord: directly on the clientObject instead of
	saveContentString, which does the same thing anyway.

	* SoObjects/Contacts/NSDictionary+Contact.m
	([NSDictionary -vcardContentFromSOGoContactRecord]): extension
	method to convert the dictionary returned with the user submission